lib/bait/tests/inout_error/array/invalid_field.in.bt
a := []i32{ no_field = 123 }
